// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
Array [
  Array [
    "edit-tags",
    undefined,
  ],
]
`;

exports[`should open the popup when the button is clicked 2`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={true}
    overlay={
      <SetIssueTagsPopup
        organization="foo"
        selectedTags={
          Array [
            "mytag",
            "test",
          ]
        }
        setTags={[Function]}
      />
    }
  >
    <Button
      className="js-issue-edit-tags button-link issue-action issue-action-with-options"
      onClick={[Function]}
    >
      <TagsList
        allowUpdate={true}
        tags={
          Array [
            "mytag",
            "test",
          ]
        }
      />
    </Button>
  </Toggler>
</div>
`;

exports[`should render with the action 1`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={false}
    overlay={
      <SetIssueTagsPopup
        organization="foo"
        selectedTags={
          Array [
            "mytag",
            "test",
          ]
        }
        setTags={[Function]}
      />
    }
  >
    <Button
      className="js-issue-edit-tags button-link issue-action issue-action-with-options"
      onClick={[Function]}
    >
      <TagsList
        allowUpdate={true}
        tags={
          Array [
            "mytag",
            "test",
          ]
        }
      />
    </Button>
  </Toggler>
</div>
`;

exports[`should render without the action when the correct rights are missing 1`] = `
<TagsList
  allowUpdate={false}
  className="note"
  tags={
    Array [
      "issue.no_tag",
    ]
  }
/>
`;
